--- a/view/exercises/comunicacion/1-0-18/css/styles.css
+++ b/view/exercises/comunicacion/1-0-18/css/styles.css
@@ -1,62 +1,68 @@
-h4 {
-    text-align: center;
-}
-
-.listA,
-.listB,
-.listC {
+#listA {
     display: flex;
     flex-wrap: wrap;
-    width: 30%;
+    justify-content: center;
 }
 
-#palabras {
-    padding: 50px;
-    display: flex;
-    justify-content: space-around;
-}
-
-#palabras li {
-    width: 100%;
+.contenedorPieza {
+    height: 180px;
+    width: 180px;
+    border: 3px solid #37D3F7;
+    border-radius: 12px;
     margin: auto;
     margin-bottom: 2vh;
-    margin-right: 1px;
 }
 
-.muestra {
-    width: 30%;
-    margin: auto;
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
+.title {
+    font-size: 50px;
+    color: #37D3F7;
+}
+
+.row h4 span {
+    color: #37D3F7;
 }
 
 .box {
     height: 140px;
-    width: 100%;
+    width: 170px;
     border: 3px solid silver;
     border-radius: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.box img {
-    width: 50%;
-    height: auto;
+    margin: auto;
+    margin-bottom: 15px;
+    margin-right: 10px;
+    transition: all .3s;
 }
 
 .box:hover {
     border: 3px solid #37D3F7;
+    background: #B6ECFF;
 }
 
+.box img {
+    width: 60%;
+    height: 100%;
+    cursor: pointer;
+    border-radius: 12px;
+}
 
-/* Styles nuevos*/
+.box .img-x {
+    width: 96%;
+}
 
-.muestra img {
-    width: 100px;
-    height: 100px!important;
-    margin: 0 10px;
+.contenedor-elemento {
+    text-align: center;
+}
+
+@media only screen and (min-width: 601px) {
+    .f-left {
+        float: left!important;
+    }
+    .f-right {
+        float: right!important;
+    }
 }
 
 @media (min-width: 600px) {
@@ -88,7 +94,7 @@ h4 {
     }
     .box {
         height: 120px;
-        width: 120px;
+        width: 140px;
         border: 3px solid silver;
         border-radius: 12px;
         display: flex;
@@ -129,8 +135,8 @@ h4 {
         font-size: 30px;
     }
     .contenedorPieza {
-        width: 120px;
-        height: 120px!important;
+        width: 160px;
+        height: 125px!important;
         min-height: 120px;
     }
     .f-left {
@@ -138,6 +144,12 @@ h4 {
     }
     .f-right {
         float: right!important;
+    }
+    .ce-tres {
+        float: left!important;
+    }
+    .contenedor-elemento.ce-dos {
+        float: none!important;
     }
     .row.recibidor .l3 {
         display: flex;
@@ -156,5 +168,14 @@ h4 {
     }
     .row.recibidor .l3 {
         display: initial;
+    }
+    .ce-uno {
+        float: right!important;
+    }
+    .ce-tres {
+        float: right!important;
+    }
+    .contenedor-elemento.ce-dos {
+        float: left!important;
     }
 }
