--- a/view/exercises/comunicacion/1-1-8/css/styles.css
+++ b/view/exercises/comunicacion/1-1-8/css/styles.css
@@ -26,12 +26,12 @@ h4 {
 }
 
 .box {
-    height: 200px;
+    height: 100px;
     width: 200px;
     border: 3px solid silver;
     border-radius: 12px;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 
