--- a/view/exercises/comunicacion/1-2-32/css/styles.css
+++ b/view/exercises/comunicacion/1-2-32/css/styles.css
@@ -1,78 +1,75 @@
-.svg{
-    width: 850px;
-}
-.colores img{
-  width: 50px;
-  margin: 2vh;
-  border-radius: 18%;
-}
-#contenedorpuzzle{
-width: 80%;
-margin: 10vh auto;
-}
-.item img{
-  width: 250px ;
-  margin: 3 20px 0;
-  float: left;
-  border:solid transparent;           
-}
-.item img:hover{
-border:solid;
-}   
-h5 {
-font-size: 200%;
-}
-.img-principal{
-  margin: 5vh auto 0;
-}
-.fila1, .fila2, .fila3{
-  margin: 0 auto 2vh;
-  width: 1160px;
-  box-shadow: 0 0 5px #80808061;
-}
-.container, .content-wrapper{
-    margin: 3vh auto 0;
-}
-.fila1 img{
-  width: 20vw;
-  margin:0 auto;
+.contenedor-silabas {
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+    margin: 0 auto;
+    border: 3px solid silver;
+    border-radius: 12px;
+    align-items: center;
 }
 
-@media (max-width: 1200px){
-  .container, .content-wrapper{
-    margin: 42px auto 0;
-}
+.contenedor-silabas .silabas {
+    width: 50px;
 }
 
-#imgIzquierda li, #imgDerecha li{
-    width: 170px;
-    height: 105px;
-    border: 1px solid silver;
-    position: relative;
-    padding: 5px 0px;
-    float: left;
-}
-#imgIzquierda li:hover,  #imgDerecha li:hover{
-    background-color: silver;
+.silabas h4 {
+    display: inline-block;
+    font-size: 1.8rem;
+    background-color: #37D3F7;
+    font-weight: bold;
+    padding: 3px 15px;
+    border-radius: 12px;
 }
 
-#imgIzquierda img, #imgDerecha img{
-     width: 100px;
-      max-height: 95px;
-      top: 0;
-      bottom: 0;
-      margin: auto;
- 
+.silabas h4 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
 
+
+/**************/
+
+.contenedor-ejercicio {
+    padding-top: 30px;
 }
-.campo{
-  float: left;
+
+.contenedor-oraciones {
+    padding-top: 30px;
 }
-ul{
-  margin: 0;
+
+.oracion {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-bottom: 25px;
 }
-.b span{
-  font-size: 30px;
-  line-height: 80px;
-  font-weight: 600;
+
+.oracion span {
+    display: block;
+    font-size: 2rem;
+}
+
+.oracion span.span-before {
+    margin-right: 7px;
+}
+
+.oracion span.span-after {
+    margin-left: 7px;
+}
+
+.oracion .contenedor-palabra {
+    width: 150px;
+    height: 50px;
+    border: 3px solid silver;
+    border-radius: 12px;
+}
+
+@media(max-height: 640px) {
+    .silabas h4 {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+    .oracion {
+        padding-bottom: 15px;
+    }
 }
