--- a/view/exercises/comunicacion/1-1-18/css/styles.css
+++ b/view/exercises/comunicacion/1-1-18/css/styles.css
@@ -1,76 +1,79 @@
-h4 {
-    text-align: center;
+.svg{
+    width: 850px;
+}
+.colores img{
+  width: 50px;
+  margin: 2vh;
+  border-radius: 18%;
+}
+#contenedorpuzzle{
+width: 80%;
+margin: 10vh auto;
+}
+.item img{
+  width: 250px ;
+  margin: 3 20px 0;
+  float: left;
+  border:solid transparent;           
+}
+.item img:hover{
+border:solid;
+}   
+h5 {
+font-size: 200%;
+}
+.img-principal{
+  margin: 5vh auto 0;
+}
+.fila1, .fila2, .fila3{
+  margin: 0 auto 2vh;
+  width: 1160px;
+  box-shadow: 0 0 5px #80808061;
+}
+.container, .content-wrapper{
+    margin: 3vh auto 0;
+}
+.fila1 img{
+  width: 20vw;
+  margin:0 auto;
 }
 
-.listA,
-.listB,
-.listC {
-    display: flex;
-    flex-wrap: wrap;
-    width: 30%;
+@media (max-width: 1200px){
+  .container, .content-wrapper{
+    margin: 42px auto 0;
+ }
 }
-
-#palabras {
-    padding: 50px;
-    display: flex;
-    justify-content: space-around;
-}
-
-#palabras li {
-    width: 100%;
-    margin: auto;
-    margin-bottom: 2vh;
-    margin-right: 1px;
-}
-
-.muestra {
-    width: 30%;
-    margin: auto;
-    margin-top: 40px;
+#imgIzquierda li, #imgDerecha li {
+    width: 170px;
+    height: 105px;
+    border: 1px solid silver;
+    position: relative;
+    padding: 5px 2px;
+    float: left;
     display: flex;
     justify-content: center;
-}
-
-.box {
-    height: 140px;
-    width: 100%;
-    border: 3px solid silver;
-    border-radius: 12px;
-    display: flex;
     align-items: center;
-    justify-content: center;
+    text-align: center;
+    font-weight: bold;
 }
 
-.box img {
-    width: 50%;
-    height: 100%;
+#imgIzquierda li:hover,  #imgDerecha li:hover{
+    background-color: silver;
 }
 
-.box:hover {
-    border: 3px solid #37D3F7;
+#imgIzquierda img, #imgDerecha img{
+     width: 100px;
+      max-height: 95px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+ 
+
 }
-
-
-/* Styles nuevos*/
-
-h4 span {
-    color: #37D3F7;
+.campo{
+  float: left;
 }
-
-.muestra img {
-    width: 100px;
-    height: 100px!important;
-    margin: 0 10px;
-}
-
-@media (min-width: 600px) {
-    #palabras li {
-        width: 40%;
-    }
-}
-
-@media (min-width: 1024px) {
-    #palabras li {
-        width: 40%;
-    }
+ul{
+  margin: 0;
 }
