--- a/view/tools/pantalla-inicio/css/pantalla-inicio.css
+++ b/view/tools/pantalla-inicio/css/pantalla-inicio.css
@@ -9,26 +9,26 @@
 }
 
 #Fondo-Portada {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -100;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -100;
 }
 
 #Logo {
-  height: 90px;
-  width: 90px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  z-index: 10;
+    height: 90px;
+    width: 90px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    z-index: 10;
 }
 
 .mierda {
-  height: 200px;
-  width: 100%;
-  background-color: aqua;
+    height: 200px;
+    width: 100%;
+    background-color: aqua;
 }
 
 #Frase-Presentacion {
@@ -36,69 +36,105 @@
     font-size: 300%;
     font-weight: bold;
     color: #fff;
+    text-shadow: 2px 2px #acaaaa;
 }
 
 #Btn-Ready {
-  height: auto;
-  width: 300px;
-  font-size: 18px;
-  background-color: transparent;
-  color: #FFF;
-  line-height: 26px;
-  border-radius: 28px;
-  border-color: #b00000;
-  cursor: pointer;
-  transition: width 0.2s;
+    height: auto;
+    width: 300px;
+    font-size: 18px;
+    background-color: transparent;
+    color: #FFF;
+    line-height: 26px;
+    border-radius: 28px;
+    border-color: #b00000;
+    cursor: pointer;
+    transition: width 0.2s;
 }
 
 #Btn-Ready:hover {
-  width: 320px;
-  background-color: #b00000;
+    width: 320px;
+    background-color: #b00000;
 }
 
 #Aprende-Mas {
-  color: #FFF;
-  font-size: 18px;
-  opacity: 0.6;
-  position: absolute;
-  bottom: 0px;
+    color: #FFF;
+    font-size: 18px;
+    opacity: 0.6;
+    position: absolute;
+    bottom: 0px;
 }
 
 .icon-keyboard_arrow_down {
-  color: #FFF;
-  font-size: 28px;
-  opacity: 0.6;
+    color: #FFF;
+    font-size: 28px;
+    opacity: 0.6;
 }
 
-  .FormNombre{
+.FormNombre {
     width: 50%;
-   
-
-  }
-input{
-  text-align: center;
 }
 
-input[type=text].invalid:not(.browser-default), input[type=text].invalid:not(.browser-default):focus {
+input {
+    text-align: center;
+}
+
+input[type=text].invalid:not(.browser-default),
+input[type=text].invalid:not(.browser-default):focus {
     border-bottom: 1px solid #F44336 !important;
-    -webkit-box-shadow: 0 1px 0 0 #F44336  !important;
-    box-shadow: 0 1px 0 0 #F44336  !important;
+    -webkit-box-shadow: 0 1px 0 0 #F44336 !important;
+    box-shadow: 0 1px 0 0 #F44336 !important;
 }
 
-input[type=text]:not(.browser-default):focus:not([readonly]){
+input[type=text]:not(.browser-default):focus:not([readonly]) {
     border-bottom: 1px solid #2196F3;
     -webkit-box-shadow: 0 1px 0 0 #2196F3;
     box-shadow: 0 1px 0 0 #2196F3;
 }
 
-input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
-   
-  background-color: #ffffff !important;
+input:not([type]),
+input[type=text]:not(.browser-default),
+input[type=password]:not(.browser-default),
+input[type=email]:not(.browser-default),
+input[type=url]:not(.browser-default),
+input[type=time]:not(.browser-default),
+input[type=date]:not(.browser-default),
+input[type=datetime]:not(.browser-default),
+input[type=datetime-local]:not(.browser-default),
+input[type=tel]:not(.browser-default),
+input[type=number]:not(.browser-default),
+input[type=search]:not(.browser-default),
+textarea.materialize-textarea {
+    background-color: #ffffff !important;
     border-radius: 15px !important;
 }
 
-#portada img{
+#portada img {
     transform: translate(-3vw, 11vh);
     width: 7vw;
     position: absolute;
 }
+
+
+/********************************/
+
+.btn-success {
+    padding: 6px 25px;
+    height: auto;
+    font-weight: bold;
+    background-color: #4decec!important;
+    color: white!important;
+    font-size: 25px;
+    border: 3px solid white!important;
+    border-radius: 12px;
+}
+
+.unidad-tema {
+    color: white!important;
+    font-weight: bold;
+    text-align: left;
+    padding-left: 50px;
+}
+
+
+/*******************************/
