--- a/view/tools/pantalla-inicio/css/pantalla-inicio.css
+++ b/view/tools/pantalla-inicio/css/pantalla-inicio.css
@@ -136,5 +136,10 @@ textarea.materialize-textarea {
     padding-left: 50px;
 }
 
+.btn-back.btn.red {
+    float: left;
+    margin: 15px;
+}
+
 
 /*******************************/
