--- a/view/exercises/comunicacion/1-3-56/css/styles.css
+++ b/view/exercises/comunicacion/1-3-56/css/styles.css
@@ -1,74 +1,95 @@
-.svg{
-    width: 850px;
+.svg {
+    width: 800px;
+    display: flex;
+    justify-content: center;
 }
-.colores img{
-  width: 50px;
-  margin: 2vh;
-  border-radius: 18%;
+
+.colores img {
+    width: 50px;
+    margin: 2vh;
+    border-radius: 18%;
 }
-#contenedorpuzzle{
-width: 80%;
-margin: 10vh auto;
+
+#contenedorpuzzle {
+    width: 80%;
+    margin: 10vh auto;
 }
-.item img{
-  width: 250px ;
-  margin: 3 20px 0;
-  float: left;
-  border:solid transparent;           
+
+.item img {
+    width: 250px;
+    margin: 3 20px 0;
+    float: left;
+    border: solid transparent;
 }
-.item img:hover{
-border:solid;
-}   
+
+.item img:hover {
+    border: solid;
+}
+
 h5 {
-font-size: 200%;
+    font-size: 200%;
+    width: 80%;
 }
-.img-principal{
-  margin: 5vh auto 0;
+
+.img-principal {
+    margin: 5vh auto 0;
 }
-.fila1, .fila2, .fila3{
-  margin: 0 auto 2vh;
-  width: 1160px;
-  box-shadow: 0 0 5px #80808061;
+
+.fila1,
+.fila2,
+.fila3 {
+    margin: 0 auto 2vh;
+    width: 1160px;
+    box-shadow: 0 0 5px #80808061;
 }
-.container, .content-wrapper{
+
+.container,
+.content-wrapper {
     margin: 3vh auto 0;
 }
-.fila1 img{
-  width: 20vw;
-  margin:0 auto;
+
+.fila1 img {
+    width: 20vw;
+    margin: 0 auto;
 }
 
-@media (max-width: 1200px){
-  .container, .content-wrapper{
-    margin: 42px auto 0;
+@media (max-width: 1200px) {
+    .container,
+    .content-wrapper {
+        margin: 42px auto 0;
+    }
 }
-}
-
-#imgIzquierda li, #imgDerecha li{
+#imgIzquierda li, #imgDerecha li {
     width: 170px;
-    height: 105px;
+    height: 64px;
     border: 1px solid silver;
     position: relative;
     padding: 5px 0px;
-    float: left;
-}
-#imgIzquierda li:hover,  #imgDerecha li:hover{
+    margin-bottom: 15px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #imgIzquierda li:hover, #imgDerecha li:hover {
     background-color: silver;
-}
-
-#imgIzquierda img, #imgDerecha img{
-     width: 100px;
-      max-height: 95px;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-}
-
-ul{
-  margin: 0;
-}
-.b span{
-  font-size: 30px;
-  line-height: 80px;
-  font-weight: 600;
-}
+  }
+  
+  #imgIzquierda img, #imgDerecha img {
+    width: 100px;
+    max-height: 95px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
+  
+  ul {
+    margin: 0;
+  }
+  
+  .b span, .a span {
+    font-size: 30px;
+    line-height: 80px;
+    /* font-weight: 600; */
+  }
