--- a/view/exercises/comunicacion/1-5-17/css/styles.css
+++ b/view/exercises/comunicacion/1-5-17/css/styles.css
@@ -1,8 +1,120 @@
-h4 {
-    text-align: center;
+.container-two {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 70%;
 }
 
+.mt80 {
+    margin-top: 10vh;
+}
 
-/**************/
+table.crucigrama2 {
+    width: auto;
+    display: table;
+}
 
-@media(max-height: 640px) {}
+table.crucigrama2 tr {
+    border: none;
+}
+
+table.crucigrama2 tr td {
+    text-align: center;
+    border: none;
+    background-color: transparent;
+    width: 30px !important;
+    height: 30px !important;
+    padding: 0;
+}
+
+table.crucigrama2 tr td strong {
+    color: #FFFFFF;
+    width: 37px;
+    height: 30px;
+    padding-top: 9px;
+    display: inline-block;
+    background-color: #37D3F7;
+}
+
+table.crucigrama2 tr td div {
+    width: 40px;
+    height: 40px;
+    border: 2px solid #37D3F7;
+    padding: 0px;
+    text-align: center;
+    margin: 1px;
+    border-radius: 12px;
+    /* background: #B6ECFF; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 1.3em;
+}
+
+table.crucigrama2 tr td div:hover {
+    cursor: pointer;
+}
+
+.campo {
+    padding: 50px;
+}
+
+.campo-img {
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.campo-img span {
+    color: #0095DA;
+    font-size: 2em;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.campo img {
+    width: 80px;
+    height: auto;
+}
+
+.letras span {
+    text-transform: capitalize;
+    font-size: 25px;
+    position: relative;
+    float: left;
+    margin-right: 2px;
+    margin-top: 2px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*background:#848884;*/
+    border: 2px solid #37D3F7;
+    transition: all .2s;
+}
+
+.letras span:hover {
+    cursor: pointer;
+    background: #B6ECFF;
+}
+
+.abecedario {
+    margin-top: 3vh;
+}
+
+@media(max-height: 640px) {
+    .r-crucigrama {
+        display: flex;
+    }
+    .campo {
+        padding: 0;
+        margin: 0;
+    }
+    .campo-img {
+        padding: 0;
+    }
+    .abecedario {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
