--- a/view/exercises/comunicacion/1-8-13/css/styles.css
+++ b/view/exercises/comunicacion/1-8-13/css/styles.css
@@ -2,6 +2,10 @@ h4 {
     text-align: center;
 }
 
+h5 {
+    width: 85%;
+}
+
 .contenedor-ejercicios {
     width: 80%;
     margin-left: 10%;
@@ -13,22 +17,7 @@ h4 {
 }
 
 .ejercicio {
-    width: 33%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.ejercicio .imagen-palabra {
-    width: 180px;
-    display: flex;
-    justify-content: center;
-}
-
-.ejercicio .imagen-palabra img {
-    max-width: 100%;
-    max-height: 200px;
+    width: 100%;
 }
 
 .ejercicio .contenedor-respuesta {
@@ -41,22 +30,34 @@ h4 {
 .ejercicio .contenedor-respuesta span {
     display: block;
     font-size: 1.9rem;
-}
-
-.ejercicio .contenedor-respuesta span.span-before {
     margin-right: 7px;
-}
-
-.ejercicio .contenedor-respuesta span.span-after {
     margin-left: 7px;
 }
 
 .ejercicio .contenedor-respuesta .palabra {
-    width: 180px;
+    width: 150px;
     height: 50px;
     border: 3px solid silver;
     border-radius: 12px;
     margin-bottom: 3px;
+}
+
+.tablero {
+    display: flex;
+    width: 70%;
+    margin: auto;
+    justify-content: center;
+    padding-top: 30px;
+}
+
+.contenedor-img {
+    width: 30%;
+    text-align: center;
+}
+
+.contenedor-img img {
+    max-width: 100%;
+    max-height: 200px;
 }
 
 
@@ -64,11 +65,9 @@ h4 {
 
 .contenedor-silabas {
     display: inline-flex;
-    width: 90%;
-    margin: 0 auto;
+    width: 30%;
     justify-content: center;
-    margin-left: 5%;
-    padding-top: 40px;
+    flex-wrap: wrap;
 }
 
 .contenedor-silabas .silabas {
@@ -95,33 +94,16 @@ h4 {
 @media(max-height: 640px) {
     .row {
         display: flex;
-        align-items: flex-start;
     }
-    .contenedor-silabas {
-        width: 40%;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .silabas {
-        text-align: center;
-    }
-    .silabas h4 {
-        margin: 10px;
+    .tablero {
+        align-items: center;
+        padding-top: 0;
     }
     .contenedor-ejercicios {
-        width: 60%;
-        padding-top: 25px;
-    }
-    .ejercicio {
-        width: 33%;
-    }
-    .ejercicio .imagen-palabra {
-        width: 120px;
+        padding-top: 15px;
+        margin-left: 0;
     }
     .contenedor-silabas {
-        padding-top: 16px;
-    }
-    .ejercicio .imagen-palabra img {
-        max-height: 121px;
+        padding-top: 10px;
     }
 }
