--- a/view/exercises/matematica/1-2-2/css/styles.css
+++ b/view/exercises/matematica/1-2-2/css/styles.css
@@ -21,7 +21,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     padding: 10px;
     justify-content: center;
 }
