--- a/view/exercises/matematica/2-0-5/css/r3x1100.css
+++ b/view/exercises/matematica/2-0-5/css/r3x1100.css
@@ -2,12 +2,12 @@
 @media (max-width: 1100px) {
 
 
+
 #uno, #dos, #tres {
     box-shadow: inset 0px 1px 3px 0px #7d7c7c;
     /* border: #25252591 solid 2px; */
     width: 310px;
     /* min-width: 346px; */
-     background-color: #f7f7f7;
          background-color: #f2f0ff40;
 }
 
@@ -24,19 +24,19 @@
 
 
 .imgvf {
-    background-image: url(../../img/2-3/a3.gif);
+        background-image: url(../img/2-3/a3.gif);
     background-size: 380px 160px;
     width: 380px;
     height: 160px;
-    margin: 11% auto 0;
+    margin: 0% auto 0;
     background-repeat: no-repeat;
 }
+
 .item3 {
     float: left;
     width: 100%;
     padding: 0;
 }
-
 
 .seleccion {
     top: auto;
