--- a/view/exercises/matematica/2-0-5/css/r3x2750.css
+++ b/view/exercises/matematica/2-0-5/css/r3x2750.css
@@ -3,7 +3,7 @@
 @media (max-width: 2750px) {
 
 .imgvf {
-    background-image: url(../../img/1-4/conjuntoUno.png);
+    background-image: url(../img/2-3/a3.gif);
     background-size: 350px 150px;
     width: 350px;
     height: 140px;
@@ -17,4 +17,13 @@
     margin: 0 auto;
 }
 
+.container, .content-wrapper {
+    position: fixed;
+    margin: 0 auto 0;
+    width: 100%;
+    max-width: 100%;
 }
+
+}
+
+
