--- a/view/exercises/matematica/2-0-1/css/styles.css
+++ b/view/exercises/matematica/2-0-1/css/styles.css
@@ -62,7 +62,7 @@ label {
   max-width: 100%;
 }
 
-ul:not(.browser-default) > li {
+#ulClass:not(.browser-default) > li {
   list-style-type: none;
   float: left;
 }
@@ -162,12 +162,11 @@ ul:not(.browser-default) > li {
   border-radius: 15px;
 }
 
-ul:not(.browser-default) > li {
+#ulClass:not(.browser-default) > li {
   list-style-type: none;
   float: left;
 }
 .caballo {
   height: 156px !important;
-
   margin-top: -10px;
 }
