--- a/view/exercises/matematica/2-0-3/css/styles.css
+++ b/view/exercises/matematica/2-0-3/css/styles.css
@@ -3,8 +3,6 @@
     max-width: 1280px;
     width: 90%;
 }
-
-
 .title {
     font-size: 28px;
     color: #37D3F7;
@@ -13,7 +11,6 @@
 .conjuntos{
     margin-top: 4%;
     display: grid;
-    
 }
 .conjuntos img{
     width: 35vw;
@@ -34,8 +31,10 @@
     margin:  0px 50px;
     background-color: rgb(16, 189, 241);
     border-radius: 20px;
+    height: 50px;
 }
 .opcion h5{
     font-size: 24px;
     padding: 10px;
 }
+
