--- a/view/exercises/matematica/2-0-4/css/styles.css
+++ b/view/exercises/matematica/2-0-4/css/styles.css
@@ -54,3 +54,14 @@ img.img-principal .dos{
 .pieza:hover{
     box-shadow: 1px 1px 1px rgba(51, 51, 51, 0.13);
 }
+.letStyle{
+    font-size: 22px;
+    color: rgb(64, 137, 247);
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+}
+
+
+
+
