--- a/view/exercises/matematica/2-0-8/css/styles.css
+++ b/view/exercises/matematica/2-0-8/css/styles.css
@@ -1,7 +1,7 @@
 .container-two {
   padding-top: 4vh;
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1o00px;
   width: 90%;
 }
 .cajas {
@@ -26,7 +26,16 @@
   border-radius: 10px;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-height: 600px) {
+  .cajas{
+    height: 60px;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  center h5{
+    font-size: 22px;
+  }
   .container-two {
     padding-top: 10vh;
     margin: 0 auto;
