--- a/view/exercises/comunicacion/lectura3-4-1-1/css/styles.css
+++ b/view/exercises/comunicacion/lectura3-4-1-1/css/styles.css
@@ -91,6 +91,7 @@ ul.tabs li.indicator {
         width: 30%;
     }
     .lectura p {
+        padding-right: 70px;
         font-size: 1rem;
     }
     .imagen-lectura img {
