--- a/view/exercises/matematica/2-1-22/css/styles.css
+++ b/view/exercises/matematica/2-1-22/css/styles.css
@@ -1,10 +1,13 @@
 .container-two {
   padding-top: 4vh;
   margin: 0 auto;
-  max-width: 1200px;
-  width: 90%;
+  max-width: 1000px;
+  width: 70%;
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center;
   align-items: center;
+}
+.parrafo p{
+ font-weight: 600;
+ font-size: 20px;
 }
