--- a/view/exercises/matematica/1-7-2/css/styles.css
+++ b/view/exercises/matematica/1-7-2/css/styles.css
@@ -11,7 +11,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
     /* padding: 10px; */
 }
 
