--- a/view/exercises/matematica/2-3-3/css/styles.css
+++ b/view/exercises/matematica/2-3-3/css/styles.css
@@ -144,3 +144,23 @@
     color: red;
     margin-left: 2vh;
 }
+@media screen and (max-width: 1350px){
+    .grid-item{
+        font-size: 15px;
+    }
+    .container-two {
+        margin: 0 auto;
+        max-width: 1080px;
+        width: 70%;
+        height: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .select-wrapper input.select-dropdown {
+        border: 1px solid silver;
+        width: 60px;
+        margin: 0;
+    }
+}
