--- a/view/exercises/comunicacion/1-6-4/css/styles.css
+++ b/view/exercises/comunicacion/1-6-4/css/styles.css
@@ -2,10 +2,16 @@
     margin: 0 auto;
     max-width: 1280px;
     width: 70%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.mt80 {
-    margin-top: 10vh;
-  }
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
   table.crucigrama2 {
     width: auto;
@@ -33,8 +39,8 @@
     background-color: #37D3F7;
   }
   table.crucigrama2 tr td div {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border: 2px solid #37D3F7;
     padding: 0px;
     text-align: center;
@@ -45,16 +51,21 @@
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
-    font-size: 1.3em;
+    font-size: 1em;
   }
   table.crucigrama2 tr td div:hover {
     cursor: pointer;
   }
   .campo {
-    padding: 50px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
   }
   .campo-img {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0 20px;
   }
   .campo-img span {
@@ -66,27 +77,4 @@
   .campo img {
     width: 80px;
     height: auto;
-  }
-  .letras span{
-    text-transform:capitalize;
-    font-size:25px;
-    position:relative;
-    float:left;
-    margin-right:2px;
-    margin-top:2px;
-    width:50px;
-    height:50px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    /*background:#848884;*/
-    border: 2px solid #37D3F7;
-    transition: all .2s;
-  }
-  .letras span:hover {
-    cursor: pointer;
-    background: #B6ECFF;
-  }
-  .abecedario {
-    margin-top: 3vh;
   }
