--- a/view/exercises/matematica/2-3-10/css/styles.css
+++ b/view/exercises/matematica/2-3-10/css/styles.css
@@ -4,80 +4,78 @@
   max-width: 1000px;
   width: 60%;
   display: grid;
-  grid-template-columns:  1fr;
+  grid-template-columns: 1fr 3fr 1fr;
   align-items: center;
   justify-items: center;
 }
-.fila{
-  margin: 5px auto;
-  width: 50%;
+.middle{
+  width: 100%;
+}
+.droppable{
+  background-color: rgb(250, 250, 250);
+  width: 100px;
+  height: 60px;
+  border-radius: 10px;
+  border: 1px solid rgb(236, 236, 236);
+  box-shadow: inset 1px 1px 1px 1px rgba(75, 75, 75, 0.164);
+}
+.obj{
+  padding: 10px;
+  background-color:rgb(253, 168, 57);
+  color: #fff;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 20px 0px;
+}
+.item{
+  border: 1px solid rgb(243, 241, 241);
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr ;
+  grid-template-columns: auto auto auto;
+  width: 100%;
   align-items: center;
   justify-items: center;
-  border: 1px solid rgb(216, 216, 216);
-  border-radius: 5px;
-  padding: 4px 10px;
+  margin: 10px 0px;
+  grid-row-gap: 30px;
 }
-
-.uno span{
-  display: inline-block;
-  padding: 0px 4px;
-}
-.numero{
+.numero h5{
+  color : #000;
   font-weight: 600;
-  font-size: 20px;
+
 }
-.rojo{
-  font-weight: 600;
-  font-size: 30px;
-  color: rgb(158, 13, 13);
+.item .selector{
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  border-left: 1px solid rgb(175, 175, 175);
+  border-right:  1px solid rgb(175, 175, 175);
+  width: 100%;
+
 }
-
-
-
-
-
-
-
-
-/* Select */
-.select-wrapper input.select-dropdown {
-  border: 1px solid rgb(155, 155, 155);
-  width: 40px;
-  height: 40px;
-  margin: 0;
-  font-weight: 400;
-  font-size: 20px;
+.card-pa{
+  padding: 20px;
 }
-
-.select-wrapper input.select-dropdown:focus {
-  border: 1px solid rgb(202, 202, 202);
-}
-
-.select-wrapper ul {
-  height: auto;
-}
-
-.select-wrapper {
-  position: relative;
-  margin-left: 0vh;
-  margin-right: 0vh;
-}
-
-.dropdown-content {
-  background-color: #fff;
-  margin: 0;
-  display: none;
-  min-width: 60px;
-  overflow-y: auto;
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 9999;
-  -webkit-transform-origin: 0 0;
-  transform-origin: 0 0;
-  width: 40px;
-  border-radius: 2px;
+@media screen and (max-width: 1300px){
+  .card-pa {
+    padding: 14px!important;
+  }
+  center h5{
+    font-size: 24px;
+  }
+  .container-two h5{
+    font-size: 20px;
+  }
+  .droppable {
+    height: 50px;
+    margin: 5px 0px;
+  }
+  .obj{
+    padding: 5px;
+    background-color:rgb(253, 168, 57);
+    color: #fff;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px 0px;
+  }
 }
