--- a/view/exercises/matematica/2-3-6/css/styles.css
+++ b/view/exercises/matematica/2-3-6/css/styles.css
@@ -1,81 +1,204 @@
 .container-two {
-  padding-top: 4vh;
-  margin: 0 auto;
-  max-width: 1000px;
-  width: 60%;
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  align-items: center;
-  justify-items: center;
+    margin: 0 auto;
+    max-width: 1080px;
+    width: 70%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-.middle{
-  width: 100%;
-}
-.droppable{
-  background-color: rgb(250, 250, 250);
-  width: 100px;
-  height: 60px;
-  border-radius: 10px;
-  border: 1px solid rgb(236, 236, 236);
-  box-shadow: inset 1px 1px 1px 1px rgba(75, 75, 75, 0.164);
-}
-.obj{
-  padding: 10px;
-  background-color:rgb(30, 136, 229);
-  color: #fff;
-  border-radius: 10px;
-  font-size: 20px;
-  font-weight: 600;
-  margin: 20px 0px;
-}
-.item{
-  border: 1px solid rgb(243, 241, 241);
-  display: grid;
-  grid-template-columns: auto auto auto;
-  width: 100%;
-  align-items: center;
-  justify-items: center;
-  margin: 10px 0px;
-  grid-row-gap: 30px;
-}
-.numero h5{
-  color : #000;
-  font-weight: 600;
 
+::-webkit-scrollbar {
+    -webkit-border-radius: 5px;
+    background-color: transparent;
+    border-radius: 5px;
+    height: 10px;
+    -webkit-transition: background-color .2s linear;
+    -o-transition: background-color .2s linear;
+    transition: background-color .2s linear;
+    width: 0px;
 }
-.item .selector{
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  border-left: 1px solid rgb(175, 175, 175);
-  border-right:  1px solid rgb(175, 175, 175);
-  width: 100%;
+.o{
+  color: orange;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    justify-content: center;
+}
+.principalNumber{
+  grid-column: 1/5;
+  text-align: center;
+  font-weight: 600;
+  color: rgb(133, 83, 180);
+  font-size: 2rem;
+}
+.detalles{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
-}
-.card-pa{
-  padding: 20px;
-}
-@media screen and (max-width: 1300px){
-  .card-pa {
-    padding: 14px!important;
-  }
-  center h5{
-    font-size: 24px;
-  }
-  .container-two h5{
-    font-size: 20px;
-  }
-  .droppable {
-    height: 50px;
-    margin: 5px 0px;
-  }
-  .obj{
-    padding: 5px;
-    background-color:rgb(30, 136, 229);
-    color: #fff;
-    border-radius: 10px;
-    font-size: 20px;
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgb(102, 204, 102);
+    padding: 8px;
     font-weight: 600;
-    margin: 20px 0px;
-  }
+    font-size: 30px;
+    text-align: center;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+.principalNumber {
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    display: grid;
+    justify-items: center;
+}
+.principalNumber img{
+    width: 300px;
+    align-self: flex-end;
+    top: 30px;
+}
+.image2{
+    width: 100%;
+}
+.cabe {
+    background-color: rgb(209, 230, 186);
+    border-color: rgb(102, 204, 102);
+    padding: 0;
+}
+.bn {
+    border: none;
+}
+.bre {
+    border-bottom: 3px solid red;
+}
+.r {
+    color: red;
+}
+.mas {
+    position: absolute;
+    top: 5px;
+    right: -31px;
+    color: red;
+    /* bottom: 0; */
+}
+.b {
+    color: blue;
+}
+.img {
+    width: 90px;
+    height: auto;
+}
+
+.campo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.mg {
+    margin-right: 10px;
+    margin-left: 10px;
+    color: red;
+}
+
+/* .grid-container .select-wrapper {
+    margin-right: 1vh;
+    margin-left: 1vh;
+} */
+.select-wrapper ul {
+    width: 80%;
+    margin: 10px auto;
+    height: 300px !important;
+}
+
+.select-wrapper input.select-dropdown {
+    border: 1px solid silver;
+    width: 80%;
+    margin: 10px auto;
+}
+
+.select-wrapper input.select-dropdown:focus {
+    border-bottom: 1px solid silver;
+}
+.select-wrapper .caret{
+    display: none;
+}
+.info1, .info2{
+    grid-column: 1/5;
+}
+.dropdown-content {
+    background-color: #fff;
+    margin: 0;
+    display: none;
+    min-width: 100px;
+    overflow-y: auto;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    width: 100px;
+    border-radius: 12px;
+}
+
+.pregunta {
+    font-size: 22px;
+}
+
+.tabla {
+    width: 100%;
+}
+
+.tabla {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    justify-content: center;
+}
+
+.flecha {
+    color: red;
+    margin-left: 2vh;
+}
+@media screen and (max-width: 1350px){
+    .grid-item{
+        font-size: 15px;
+    }
+    .container-two {
+        margin: 0 auto;
+        max-width: 1080px;
+        width: 70%;
+        height: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .select-wrapper input.select-dropdown {
+        border: 1px solid silver;
+        width: 80%;
+        margin: 10 auto;
+    }
+}
+@media screen and (max-height: 800px){
+        center h5{
+            font-size: 24px;
+        }
+        .select-wrapper input.select-dropdown {
+            border: 1px solid silver;
+            width: 80%;
+            margin: 5px auto;
+        }
+        .grid-item{
+            padding: 4px;
+        }
 }
