--- a/view/exercises/matematica/2-3-8/css/styles.css
+++ b/view/exercises/matematica/2-3-8/css/styles.css
@@ -1,65 +1,153 @@
 .container-two {
-  padding-top: 4vh;
-  margin: 0 auto;
-  max-width: 1000px;
-  width: 60%;
-  display: grid;
-  grid-template-columns:  1fr;
-  align-items: center;
-  justify-items: center;
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 70%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-.image{
-  text-align: center;
+
+::-webkit-scrollbar {
+    -webkit-border-radius: 5px;
+    background-color: transparent;
+    border-radius: 5px;
+    height: 10px;
+    -webkit-transition: background-color .2s linear;
+    -o-transition: background-color .2s linear;
+    transition: background-color .2s linear;
+    width: 0px;
 }
-.image img{
-  width: 700px;
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    padding: 10px;
+    width: 90%;
 }
-.contenedor{
-  width: 80%;
-  margin: 20px auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  justify-items: center;
+
+.grid-item {
+    border: 1px solid silver;
+    padding: 6px;
+    text-align: center;
+    display: flex;
+    font-size: 24px;
+    align-items: center;
+    justify-content: center;
 }
-.rojo{
-  color: rgb(190, 14, 14);
-  font-weight: 600;
-  font-size: 30px;
+
+.tc {
+    background:rgb(208, 237, 244);
+    font-size: 24px;
+    font-weight: bold;
+    color: #0095DA;
+    border:none;
 }
-.parra{
-  justify-self: left;
-  margin-left: 8vw;
+.tt {
+    background-color: rgb(44, 170, 243);
+    color: #fff;
+    font-weight: bold;
 }
-.ordenar{
-  width: 80%;
-  margin: 20px auto;
-  display: grid;
-  grid-template-columns: 3fr 1fr 3fr 1fr 3fr;
-  align-items: center;
-  justify-items: center;
+.bn {
+    border: none;
 }
-.droppable{
-  width: 150px;
-  height: 40px;
-  border: 1px solid rgb(10, 234, 250);
-  padding: 25px 0px;
-  margin: 0px 30px;
-  border-radius: 4px;
+.img {
+    height: 60px;
+    width: auto;
+    margin-left: 1vh;
 }
-.options{
-  margin: auto;
-  width: 80%;
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
+
+/* Select */
+
+.select-wrapper input.select-dropdown {
+    border: 1px solid silver;
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
 }
-.options .obj{
-  background-color: rgb(0, 132, 255);
-  margin: 4px 10px;
-  color: rgb(255, 255, 255);
-  padding: 4px;
-  font-weight: 600;
-  font-size: 20px;
-  text-align: center;
-  border-radius: 20px;
+
+.select-wrapper input.select-dropdown:focus {
+    border-bottom: 1px solid silver;
+    width: 100%;
+}
+
+.select-wrapper ul {
+    width: 100%;
+    height: auto;
+}
+
+.grande .select-wrapper {
+    width: 100%;
+    position: relative;
+    margin-left: .5vh;
+    margin-right: .5vh;
+}
+
+.dropdown-content {
+    background-color: #fff;
+    margin: 0;
+    display: none;
+    min-width: 90px;
+    overflow-y: auto;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    width: 90px;
+    border-radius: 12px;
+}
+/* Smal Select */
+.smal .select-wrapper input.select-dropdown {
+    border: 1px solid silver;
+    width: 60px;
+    margin: 0;
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.smal .select-wrapper input.select-dropdown:focus {
+    border-bottom: 1px solid silver;
+}
+
+.smal .select-wrapper ul {
+    height: auto;
+}
+
+.smal .select-wrapper {
+    position: relative;
+    margin-left: .5vh;
+    margin-right: .5vh;
+}
+
+.smal .dropdown-content {
+    background-color: #fff;
+    margin: 0;
+    display: none;
+    min-width: 30px;
+    overflow-y: auto;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    width: 30px;
+    border-radius: 12px;
+}
+
+.principal {
+    height: 240px;
+    width: auto;
+    background: #fff;
+}
+@media (min-width: 1920px) {
+    .principal {
+        height: 300px;
+        width: auto;
+    }
 }
