Libro Matematica 2 terminado

--- a/view/exercises/matematica/2-9-20/css/styles.css
+++ b/view/exercises/matematica/2-9-20/css/styles.css
@@ -83,7 +83,12 @@
   justify-content: center;
   align-items: center;
 }
-
+.grid-item-a img{
+  width: 400px;
+}
+.grid-item-b img{
+  width: 130px;
+}
 .img-a {
   width: 250px;
   height: auto;
