--- a/view/exercises/matematica/2-9-4/css/styles.css
+++ b/view/exercises/matematica/2-9-4/css/styles.css
@@ -37,6 +37,11 @@
 .select-wrapper .caret{
   display: none;
 }
+@media screen and (max-width: 1300px){
+  .item img{
+    width: 400px;
+  }
+}
 input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea {
   background-color: #ffffff !important;
   border-radius: 8px !important;
