--- a/view/exercises/matematica/2-2-4/css/styles.css
+++ b/view/exercises/matematica/2-2-4/css/styles.css
@@ -113,3 +113,10 @@
         width: auto;
     }
 }
+@media screen and (max-width: 1300px){
+    .container-two{
+        width: 1280px;
+        width: 90%;
+        height: 70%;
+    }
+}
