--- a/view/exercises/matematica/4-1-14/css/styles.css
+++ b/view/exercises/matematica/4-1-14/css/styles.css
@@ -1,7 +1,7 @@
 .container-two {
     margin: 0 auto;
     max-width: 1280px;
-    width: 80%;
+    width: 85%;
     height: 70%;
     display: flex;
     align-items: center;
@@ -22,10 +22,11 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 150px auto auto auto;
     padding: 10px;
     width: 90%;
 }
+
 .grid-item {
     border: 1px solid rgb(255, 153, 153);
     padding: 6px;
@@ -34,8 +35,15 @@
     font-size: 24px;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
-
+.potencia{
+    position: absolute;
+    top: 0;
+    right:58;
+    font-size: 18px;
+    font-weight: 600;
+}
 .tc {
     color: rgb(255, 153, 153);
     font-size: 24px;
