--- a/view/exercises/matematica/4-1-17/css/styles.css
+++ b/view/exercises/matematica/4-1-17/css/styles.css
@@ -1,14 +1,8 @@
-.container-two {
-    margin: 0 auto;
-    max-width: 1280px;
-    width: 80%;
-    height: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.row{
+    width: 60%;
+    margin: auto;
+    padding-top:8vh;
 }
-
 ::-webkit-scrollbar {
     -webkit-border-radius: 5px;
     background-color: transparent;
@@ -20,58 +14,71 @@
     width: 0px;
 }
 
-.grid-container {
+.header{
     display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
-    width: 90%;
+    grid-template-columns: 1fr 1fr;
 }
-.grid-item {
-    border: 1px solid rgb(255, 153, 153);
-    padding: 6px;
-    text-align: center;
-    display: flex;
-    font-size: 24px;
+.header > div{
+    height: 50px;
+    border: 1px solid #333;
+    display: grid;
     align-items: center;
-    justify-content: center;
-}
-
-.tc {
-    color: rgb(255, 153, 153);
+    justify-items: center;
+    background-color: rgb(235, 235, 235);
+    font-weight: 600;
     font-size: 24px;
-    font-weight: bold;
 }
-.tn {
-    color: #cc3366;
+.gridItem{
     font-size: 24px;
-    font-weight: bold;
+    display: grid;
 }
-
-.img {
-    width: 18px;
-    height: auto;
-    margin-left: 1vh;
+.gridData{
+    display: grid;
+    align-items: center;
 }
-
+.data{
+    width: 240px;
+    margin: auto;
+    display: grid;
+    font-size: 22px;
+    grid-template-columns: auto auto;
+}
+.data div{
+    display: inline-block;
+}
+.tabla{
+    width: 200px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin: 20px auto;
+    text-align: center;
+}
+.divisorLine{
+    border-bottom: 1px solid #333;
+    border-left: 1px solid #333;
+}
+.linebottom{
+    padding-bottom: 4px;
+    border-bottom: 2px solid rgb(255, 1, 1);
+}
+.content{
+    border: 1px solid #333;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 /* Select */
-.largo2 .select-wrapper input.select-dropdown {
-    border: 1px solid silver;
-    width: 350px;
-    margin: 0;
-    font-weight: 400;
-    font-size: 20px;
-}
 .largo .select-wrapper input.select-dropdown {
     border: 1px solid silver;
-    width: 290px;
-    margin: 0;
+    width: 65px;
+    margin: 2;
     font-weight: 400;
     font-size: 24px;
 }
 .select-wrapper input.select-dropdown {
     border: 1px solid silver;
-    width: 90px;
-    margin: 0;
+    width: 35px;
+    margin: 3;
+    height: 32px;
     font-weight: 400;
     font-size: 24px;
 }
@@ -94,7 +101,7 @@
     background-color: #fff;
     margin: 0;
     display: none;
-    min-width: 90px;
+    min-width: 60px;
     overflow-y: auto;
     opacity: 0;
     position: absolute;
@@ -103,7 +110,7 @@
     z-index: 9999;
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
-    width: 90px;
+    width: 60px;
     border-radius: 12px;
 }
 .select-wrapper .caret{
